# KubeRoast_v1

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security-scan.yml
examples/: insecure-network.yaml  insecure-pod.yaml  insecure-rbac.yaml
kuberoast/: __init__.py  cli.py
kuberoast/attackpaths/: rbac_escalation.py
kuberoast/reporting/: csv_report.py  html.py  json.py  junit.py  sarif.py  text.py
kuberoast/scanners/: network.py  nodes.py  pods.py  policy.py  pss.py  rbac.py  secrets.py  shared.py
kuberoast/utils/: compliance.py  findings.py  kube.py  manifests.py  style.py
tests/: conftest.py  test_cli.py  test_compliance.py  test_e2e_examples.py  test_junit_csv.py  test_manifests.py  test_network.py  test_performance.py  test_pods.py  test_property_manifests.py  test_pss.py  test_rbac.py  test_reporting.py  test_sarif.py  test_sarif_schema.py  test_scanner_contracts.py  test_secrets.py  test_severity_matrix.py  test_style.py
